# intent_formalization

./: .gitignore  pyproject.toml
spec-debug/: .gitignore  EXPERIMENTS.md  HANDOFF.md  METRICS.md  README.md  REPAIR-CRITERIA.md  STATUS.md  pyproject.toml
spec-debug/configs/: nanvix.toml
spec-debug/observations/: README.md
spec-debug/spec_debug/: cli.py  config.py  gap.py  patch.py  prompt.py  report.py  score.py  verify.py
spec-determinism/: .gitignore  ARCHITECTURE.md  FINDINGS.md  ISSUES.md  JOURNEY.md  README.md  STATUS.md  SUMMARY.md  ab_compare.py  poc_a_prime_bitmap_new.py  poc_z3py_bitmap_new.py  proto_z3.py  pyproject.toml  regen_artifacts.py  run_a_prime_all.py  run_all.py  test_all.py  test_bitmap.py  test_bitmap_v2.py  test_z3py_search.py
spec-determinism/configs/: nanvix-abstract.toml  nanvix.toml
spec-determinism/docs/: PHASE2_SUMMARY.en.md  PHASE2_SUMMARY.md  abstract-determinism-plan-2026-06-04.en.md  atmosphere-incompleteness-cases-2026-05-26.en.md  atmosphere-incompleteness-pr-2026-06-01.en.md  atmosphere-status-2026-06-01.en.md  atmosphere-unknown-A-view-gap-2026-05-28.en.md  atmosphere-unknown-bucket-2026-05-27.en.md  atmosphere_incomplete_audit.md  consolidated-incompleteness-cases-2026-06-09.en.md  corpus_rerun11_results.md  critic-criteria.md  determinism-funnel-framework.md  fp-nested-view-uninterpretation.md  incompleteness-examples.md  incompleteness_summary_2026-05-26.md  ironkv-equal-fn-too-strict-cases-2026-05-19.md  ironkv-incompleteness-cases-2026-05-19.md  ironkv-real-sat-cases-2026-05-19.en.md  pipeline-2026-06-02.en.md  (+22 more)
(+5753 files in other folders)
