[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-debug"
version = "0.0.1"
description = "Observation-first debugging pipeline for spec incompleteness; sibling to spec-determinism."
requires-python = ">=3.11"
dependencies = [
    "spec-determinism",
]

[project.scripts]
spec-debug = "spec_debug.cli:main"

[tool.setuptools.packages.find]
include = ["spec_debug*"]
